# beacon-publisher-on-windows

./: Cargo.toml  README.md
src/: main.rs
