[package]
name = "beacon-publisher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.13.0", features = ["full"] }
uuid = "0.8.2"

[dependencies.windows]
version = "0.29.0"
features = [
    "Storage_Streams",
    "Foundation_Collections",
    "Devices_Bluetooth_Advertisement",
]